--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.7"
+clap = "4.5.20"
 job_scheduler = "1.2.1"
+ratatui = "0.29.0"
 reqwest = "0.12.9"
 scraper = "0.21.0"
 serde = "1.0.214"
